[tool.pyright]
typeCheckingMode = "basic"


# PDM example
[tool.pdm]
distribution = true
[tool.pdm.scripts]
isort = "isort acme"
black = "black acme"
format = { composite = ["isort", "black"] }
check_isort = "isort --check acme tests"
check_black = "black --check acme tests"
vulture = "vulture --min-confidence 100 acme tests"
ruff = "ruff check acme tests"
fix = "ruff check --fix acme tests"
codespell = "codespell --toml ./pyproject.toml"
lint = { composite = [
    "vulture",
    "codespell",
    "ruff",
    "check_isort",
    "check_black",
] }


[tool.black]
line-length = 120
# target-version = ['py310']
# include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/data
  | profiling
)/
'''


[tool.autoflake]
check = true
in-place = true
recursive = true
expand-star-imports = true
# remove_all_unused_imports = true
remove-all-unused-imports = true
# remove_unused_variables = true


# [tool.flakehell]
# exclude = ["README.rst", "README.md"]
# format = "colored"
# max_line_length = 88
# show_source = true
# whitelist = "../../allowlist.txt"
# # unused_imports = false


[tool.pytest.ini_options]
# [tool.pytest]
minversion = "8.0.0"
pythonpath = ["."]
# addopts = "-ra -q"
addopts = [
    # '-v',
    "-vv",
    # '-s',
    "--rootdir",
    "..",
    "-ra",
    # "-q",
    "--color=yes",
    "--capture=sys",
    # "--capture=tee-sys",

    # "-rf",
    # '--reuse-db', '--no-migrations',
    # "--disable-socket",
]
# 控制测试单元的打印
log_cli = true
# log_cli_level = "INFO"
# 匹配测试文件
testpaths = ["tests", "*/tests", "**/tests"]
python_files = ["test_*.py", "tests.py", "test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [
    ".vscode",
    "__pycache__",
    "node_modules",
    "venv",
    "env",
    "migrations",
    "static",
    "templates",
    "docs",
    "build",
    "dist",
    ".*",
]
# Warnings that should be ignored
filterwarnings = ["ignore::DeprecationWarning"]


[tool.isort]
# reference: https://pycqa.github.io/isort/docs/configuration/options.html
# settings_file = ".isort.cfg"
atomic = true
line_length = 120
skip_gitignore = true
profile = "black"
src_paths = ["isort", "test"]
# reverse_sort = true
# tuple_bracket_spacing = true
# tuple_brackets = false
force_grid_wrap = 0
# force_grid_wrap = 4
# 是否按照嵌套顺序分组导入
force_sort_within_sections = true
# 导入顺序 例如: 在项目中应该先导入标准库、然后是第三方库、最后是自己的模块
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
# no_lines_before = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
# 是否根据文件中导入语句的顺序对导入进行排序
force_single_line = false
# 是否在导入语句过多时分割成多行
combine_as_imports = false
known_third_party = ["django", "rest_framework"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]
known_local_folder = ["my_module3"]
known_django = "django"
lines_after_imports = 2
lines_between_types = 1
# multi_line = 3
multi_line_output = 3
# trailing_comma = true
include_trailing_comma = true
use_parentheses = true
skip = [
    "migrations",
    "static",
    "templates",
    'node_modules',
    "build",
    ".tox",
    'venv',
    'env',
    "apps/*/migrations",
    "apps/*/static",
    "apps/*/templates",
]
extend_skip = ['.md', '.json', '.gitignore', '.dockerignore']
skip_glob = ['docs/*', "tests/data", "profiling"]
extend_skip_glob = ['my_*_module.py']
# 是否在导入中添加导入时间戳注释: 要求 isort=>5.5.0
# annotate = true


[tool.codespell]
# codespell supports pyproject.toml since version 2.2.2
# NOTE: the "tomli" package must be installed for this to work
# https://github.com/codespell-project/codespell#using-a-config-file
# NOTE: ignore words for codespell must be lowercase
check-filenames = ""
ignore-words-list = "word,another,something"
skip = "htmlcov,.doctrees,*.pyc,*.class,*.ico,*.out,*.PNG,*.inv,*.png,*.jpg,*.dot"

[project]
name = "media_handler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redatman", email = "evicwork@gmail.com" }]
dependencies = [
    "requests==2.31.0",
    "sqlalchemy==2.0.27",
    "sqlmodel==0.0.16",
    "pygments==2.17.2",
    "pydantic==2.6.1",
    "openai-whisper==20231117",
    "faster-whisper==0.10.0",
    "whisper-cpp-pybind==0.1.2",
    "SpeechRecognition==3.10.1",
    "PyAudio==0.2.14",
    "pyttsx3==2.90",
    "pyobjc==9.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
